Adding the GeneralMigration Test to the default (per checkin) build changing fro dt_schema to dt_socket for remote debuging of test processes. This will allow the test to run on linux/mac machines. Improved exception handling and error messages
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@43316 219f1c6e-4a0e-43c8-96f2-6e749be13fd4